add ols function

--- a/notebooks/api_explore.ipynb
+++ b/notebooks/api_explore.ipynb
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,136 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SYF</th>\n",
-       "      <th>SP500</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2023-01-04</th>\n",
-       "      <td>0.021920</td>\n",
-       "      <td>0.007539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-05</th>\n",
-       "      <td>-0.033837</td>\n",
-       "      <td>-0.011646</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-06</th>\n",
-       "      <td>0.025641</td>\n",
-       "      <td>0.022841</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-09</th>\n",
-       "      <td>-0.015549</td>\n",
-       "      <td>-0.000768</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-01-10</th>\n",
-       "      <td>0.017033</td>\n",
-       "      <td>0.006978</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-21</th>\n",
-       "      <td>0.019287</td>\n",
-       "      <td>0.010301</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-22</th>\n",
-       "      <td>-0.002891</td>\n",
-       "      <td>0.001660</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-27</th>\n",
-       "      <td>0.002090</td>\n",
-       "      <td>0.001430</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-28</th>\n",
-       "      <td>0.000522</td>\n",
-       "      <td>0.000370</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-12-29</th>\n",
-       "      <td>-0.004691</td>\n",
-       "      <td>-0.002826</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>240 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 SYF     SP500\n",
-       "2023-01-04  0.021920  0.007539\n",
-       "2023-01-05 -0.033837 -0.011646\n",
-       "2023-01-06  0.025641  0.022841\n",
-       "2023-01-09 -0.015549 -0.000768\n",
-       "2023-01-10  0.017033  0.006978\n",
-       "...              ...       ...\n",
-       "2023-12-21  0.019287  0.010301\n",
-       "2023-12-22 -0.002891  0.001660\n",
-       "2023-12-27  0.002090  0.001430\n",
-       "2023-12-28  0.000522  0.000370\n",
-       "2023-12-29 -0.004691 -0.002826\n",
-       "\n",
-       "[240 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r.concat_series()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = df[s.ticker]\n",
-    "X = df[\"SP500\"]\n",
-    "X = sm.add_constant(X)\n",
-    "results = sm.OLS(y, X).fit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -563,8 +434,8 @@
       "Dep. Variable:                    SYF   R-squared:                       0.299\n",
       "Model:                            OLS   Adj. R-squared:                  0.296\n",
       "Method:                 Least Squares   F-statistic:                     101.6\n",
-      "Date:                Sat, 04 May 2024   Prob (F-statistic):           3.91e-20\n",
-      "Time:                        13:28:14   Log-Likelihood:                 628.67\n",
+      "Date:                Sun, 05 May 2024   Prob (F-statistic):           3.91e-20\n",
+      "Time:                        22:11:37   Log-Likelihood:                 628.67\n",
       "No. Observations:                 240   AIC:                            -1253.\n",
       "Df Residuals:                     238   BIC:                            -1246.\n",
       "Df Model:                           1                                         \n",
@@ -587,34 +458,32 @@
     }
    ],
    "source": [
-    "print(results.summary())"
+    "r.ols_summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "const   -0.000431\n",
-       "SP500    1.394171\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "const   -0.000431\n",
+      "SP500    1.394171\n",
+      "dtype: float64\n"
+     ]
     }
    ],
    "source": [
-    "results.params"
+    "results = r.ols_results\n",
+    "print(results.params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,9 +493,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m daily_mkt_vol_perc \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mstd(\u001b[43mX\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSP500\u001b[39m\u001b[38;5;124m\"\u001b[39m]) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+     ]
+    }
+   ],
    "source": [
     "daily_mkt_vol_perc = np.std(X[\"SP500\"]) * 100"
    ]
