--- a/notebooks/api_explore.ipynb
+++ b/notebooks/api_explore.ipynb
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -434,8 +434,8 @@
       "Dep. Variable:                    SYF   R-squared:                       0.299\n",
       "Model:                            OLS   Adj. R-squared:                  0.296\n",
       "Method:                 Least Squares   F-statistic:                     101.6\n",
-      "Date:                Sun, 05 May 2024   Prob (F-statistic):           3.91e-20\n",
-      "Time:                        22:11:37   Log-Likelihood:                 628.67\n",
+      "Date:                Mon, 06 May 2024   Prob (F-statistic):           3.91e-20\n",
+      "Time:                        22:43:24   Log-Likelihood:                 628.67\n",
       "No. Observations:                 240   AIC:                            -1253.\n",
       "Df Residuals:                     238   BIC:                            -1246.\n",
       "Df Model:                           1                                         \n",
@@ -463,71 +463,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "const   -0.000431\n",
-      "SP500    1.394171\n",
-      "dtype: float64\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'alpha': -0.00043093015122440187,\n",
+       " 'beta': 1.3941709669346434,\n",
+       " 'daily_mkt_vol_perc': 0.8261926241403714,\n",
+       " 'daily_idio_vol_perc': 1.762579915291804}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "results = r.ols_results\n",
-    "print(results.params)"
+    "r.get_risk_params()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alpha = results.params[\"const\"]\n",
-    "beta = results.params[\"SP500\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m daily_mkt_vol_perc \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mstd(\u001b[43mX\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSP500\u001b[39m\u001b[38;5;124m\"\u001b[39m]) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'market_vol': 115185.37696720521,\n",
+       " 'idio_vol': 176257.9915291804,\n",
+       " 'total_vol': 210557.71333527015}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "daily_mkt_vol_perc = np.std(X[\"SP500\"]) * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "daily_idio_vol_perc = np.std(y - (alpha + beta * X[\"SP500\"])) * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NMV = 10_000_000"
+    "r.get_single_stock_vol()"
    ]
   },
   {
